// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
<div>
  <main
    class="app"
  >
    <h1>
      Weather Forecast
    </h1>
    <form>
      <div
        class="textBox"
      >
        <input
          class="textBox__input"
          placeholder="location"
          required=""
          type="text"
          value="New York"
        />
        <input
          class="textBox__submit"
          tabindex="0"
          type="submit"
          value="Search"
        />
      </div>
    </form>
    <p>
      Loading...
    </p>
  </main>
</div>
`;

exports[`App renders correctly 2`] = `
<div>
  <main
    class="app"
  >
    <h1>
      Weather Forecast
    </h1>
    <form>
      <div
        class="textBox"
      >
        <input
          class="textBox__input"
          placeholder="location"
          required=""
          type="text"
          value="New York"
        />
        <input
          class="textBox__submit"
          tabindex="0"
          type="submit"
          value="Search"
        />
      </div>
    </form>
    <h3>
      Weather in New York, New York, United States of America at 2023-12-09 19:53
    </h3>
    <div
      class="current"
    >
      <img
        alt="Clear Image"
        class="current_icon"
        src="https:////cdn.weatherapi.com/weather/64x64/night/113.png"
      />
      <p
        class="current__name"
      >
        Clear
      </p>
      <p
        class="current__temp"
      >
        <span
          class="current__tempMain"
        >
          11.1
        </span>
        °C
      </p>
      <p>
        Humidity: 74%
      </p>
      <p>
        Wind: 3.6kph
      </p>
    </div>
    <h3>
      5days weather
    </h3>
    <ul
      class="forecast"
    >
      <li
        class="forecast__item"
      >
        <p
          class="forecast__itemDate"
        >
          12/09
        </p>
        <img
          alt=""
          src="//cdn.weatherapi.com/weather/64x64/day/116.png"
        />
        <p
          class="forecast__itemName"
        >
          Partly cloudy
        </p>
      </li>
      <li
        class="forecast__item"
      >
        <p
          class="forecast__itemDate"
        >
          12/10
        </p>
        <img
          alt=""
          src="//cdn.weatherapi.com/weather/64x64/day/308.png"
        />
        <p
          class="forecast__itemName"
        >
          Heavy rain
        </p>
      </li>
      <li
        class="forecast__item"
      >
        <p
          class="forecast__itemDate"
        >
          12/11
        </p>
        <img
          alt=""
          src="//cdn.weatherapi.com/weather/64x64/day/308.png"
        />
        <p
          class="forecast__itemName"
        >
          Heavy rain
        </p>
      </li>
      <li
        class="forecast__item"
      >
        <p
          class="forecast__itemDate"
        >
          12/12
        </p>
        <img
          alt=""
          src="//cdn.weatherapi.com/weather/64x64/day/113.png"
        />
        <p
          class="forecast__itemName"
        >
          Sunny
        </p>
      </li>
      <li
        class="forecast__item"
      >
        <p
          class="forecast__itemDate"
        >
          12/13
        </p>
        <img
          alt=""
          src="//cdn.weatherapi.com/weather/64x64/day/113.png"
        />
        <p
          class="forecast__itemName"
        >
          Sunny
        </p>
      </li>
    </ul>
  </main>
</div>
`;
